z-index problem fixed,absolute scroling problem fixed

--- a/styles/Header.css
+++ b/styles/Header.css
@@ -7,15 +7,17 @@
   background: var(--main-color);
   color: white;
 }
-.iconsContainer {
+.headerChildsContainer {
   display: flex;
   align-items: center;
+  font-size: 19px;
 }
 .userImage {
   width: 45px;
   height: 45px;
   background: #ffff;
   border-radius: 50%;
+  margin-left: 10px;
 }
 
 .navbarButton {
@@ -75,5 +77,16 @@
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+.short {
+  display: none;
+}
+@media (max-width: 360px) {
+  .long {
+    display: none;
+  }
+  .short {
+    display: inline-block;
   }
 }
