--- a/styles/Navbar.css
+++ b/styles/Navbar.css
@@ -6,6 +6,7 @@
   overflow: hidden;
   height: 41vh;
   transition: 200ms;
+  z-index: 8;
 }
 .container {
   display: grid;
